--- a/composer.json
+++ b/composer.json
@@ -2,26 +2,28 @@
     "name": "bobdenotter/editbutton",
     "description": "A nifty little extension to add a button to quickly edit any record in Bolt.",
     "type": "bolt-extension",
+    "keywords": [
+        "edit",
+        "button"
+    ],
     "require": {
-        "bolt/bolt": ">=2.2.0,<3.0.0"
+        "bolt/bolt": "^3.0"
     },
     "license": "MIT",
     "authors": [
         {
             "name": "Bob den Otter",
-            "email": "bob@twokings.nl  "
+            "email": "bob@twokings.nl"
         }
     ],
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "autoload": {
-        "files": [
-            "init.php"
-        ],
         "psr-4": {
-            "Bolt\\Extension\\Bobdenotter\\Editbutton\\": ""
+            "Bolt\\Extension\\Bobdenotter\\EditButton\\": ""
         }
     },
-
     "extra": {
-        "bolt-assets": "assets"
+        "bolt-class": "Bolt\\Extension\\Bobdenotter\\EditButton\\EditButtonExtension"
     }
 }
